--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@ canvas {
 
 <canvas id="canvas"></canvas>
 
+<div style="text-align:center;margin:2px ; font:normal 10px/10px 'MicroSoft YaHei';position: absolute;top: 300px; left: 680px;">
+<p style="font-family:times;color:#ea0b38"><font size=20>小喻给大家拜年了</font></p>
+<p>yxk</p>
+</div>
+
+
+
+
+
+
+}
 <script>
 // when animating on canvas, it is best to use requestAnimationFrame instead of setTimeout or setInterval
 // not supported in all browsers though and sometimes needs a prefix, so we need a shim
@@ -243,7 +254,7 @@ function loop() {
 	// lighter creates bright highlight points as the fireworks and particles overlap each other
 	ctx.globalCompositeOperation = 'lighter';
 	
-    var text = "HAPPY NEW YEAR !!  新年快乐!!";
+    var text = " 新年好!!  HAPPY NEW YEAR !!";
   ctx.font = "50px sans-serif";
   var textData = ctx.measureText(text);
   ctx.fillStyle = "rgba("+parseInt(random(0,255))+","+parseInt(random(0,255))+","+parseInt(random(0,255))+",0.3)";
