--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ function loop() {
   ctx.fillStyle = "rgba("+parseInt(random(0,255))+","+parseInt(random(0,255))+","+parseInt(random(0,255))+",0.3)";
   ctx.fillText(text,cw /2-textData.width/2,ch/2);
 
-    var text1 = " 小喻给大家拜年了：";
+    var text1 = " 小喻给您拜年了：";
   ctx.font = "50px sans-serif";
   var textData = ctx.measureText(text1);
   ctx.fillStyle = "rgba("+parseInt(random(0,255))+","+parseInt(random(0,255))+","+parseInt(random(0,255))+",0.3)";
